ecourse.core/src/main/java/eapli/ecourse/exammanagment/antlr4/exam/ExamParser.java
package eapli.ecourse.exammanagment.antlr4.exam;// Generated from Exam.g4 by ANTLR 4.10.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExamParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, TRUE=5, FALSE=6, FEEDBACK=7, GRADE=8, 
		SECCAO=9, SOLUCAO=10, OPTIONS=11, ACCEPTED=12, MATCHING=13, SINGLE_CHOICE=14, 
		MULTIPLE_CHOICE=15, SHORT_ANSWER=16, NUMERIC=17, MISSING_WORDS=18, TRUE_FALSE=19, 
		DECIMALS_ALLOWED=20, MISSING_LEFT=21, MISSING_RIGHT=22, NUMERO=23, PALAVRA=24, 
		ASTERISCO=25, HIFEN=26, UNDERSCORE=27, ESPACO=28, PONTO_FINAL=29, DOIS_PONTOS=30, 
		RETICENCIAS=31, VIRGULA=32, PONTO_INTERROGACAO=33, PONTO_EXCLAMACAO=34, 
		PARENTESIS_DIREITO=35, PARENTESIS_ESQUERDO=36, WINDOWS_NEWLINE=37, NEWLINE=38;
	public static final int
		RULE_start = 0, RULE_exame = 1, RULE_regraTituloExame = 2, RULE_regraHeaderExame = 3, 
		RULE_feedback = 4, RULE_grade = 5, RULE_seccao = 6, RULE_startPergunta = 7, 
		RULE_pergunta = 8, RULE_frase = 9, RULE_palavra = 10, RULE_listaPalavras = 11, 
		RULE_listaPalavrasMatching = 12, RULE_fraseMissing = 13, RULE_regraPergunta = 14, 
		RULE_regraMensagem = 15, RULE_pontucao = 16, RULE_type = 17, RULE_optionsMissing = 18, 
		RULE_solucaoMissing = 19, RULE_solucaoEscolha = 20, RULE_solucaoMatching = 21, 
		RULE_solucaoNumerical = 22, RULE_solucaoShort = 23, RULE_cotacao = 24, 
		RULE_acceptedNumerical = 25, RULE_solucaoTrueFalse = 26, RULE_opcao = 27, 
		RULE_opcaoTrue = 28, RULE_opcaoFalse = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "exame", "regraTituloExame", "regraHeaderExame", "feedback", 
			"grade", "seccao", "startPergunta", "pergunta", "frase", "palavra", "listaPalavras", 
			"listaPalavrasMatching", "fraseMissing", "regraPergunta", "regraMensagem", 
			"pontucao", "type", "optionsMissing", "solucaoMissing", "solucaoEscolha", 
			"solucaoMatching", "solucaoNumerical", "solucaoShort", "cotacao", "acceptedNumerical", 
			"solucaoTrueFalse", "opcao", "opcaoTrue", "opcaoFalse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'QUESTION'", "'Theme: '", "'Type: '", "'Question value: '", "'True'", 
			"'False'", "'Feedback:'", "'Grade:'", "'Sec\\u00E7\\u00E3o'", "'Solution:'", 
			"'Options:'", "'Accepted: '", "'Matching'", "'Single-Choice'", "'Multiple-Choice'", 
			"'Short Answer'", "'Numeric'", "'Select Missing Words'", "'True or False'", 
			"'Decimal numbers are allowed!'", "'[['", "']]'", null, null, "'*'", 
			"'-'", "'_'", null, "'.'", "':'", "'...'", "','", "'?'", "'!'", "')'", 
			"'('", "'\\r\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "TRUE", "FALSE", "FEEDBACK", "GRADE", "SECCAO", 
			"SOLUCAO", "OPTIONS", "ACCEPTED", "MATCHING", "SINGLE_CHOICE", "MULTIPLE_CHOICE", 
			"SHORT_ANSWER", "NUMERIC", "MISSING_WORDS", "TRUE_FALSE", "DECIMALS_ALLOWED", 
			"MISSING_LEFT", "MISSING_RIGHT", "NUMERO", "PALAVRA", "ASTERISCO", "HIFEN", 
			"UNDERSCORE", "ESPACO", "PONTO_FINAL", "DOIS_PONTOS", "RETICENCIAS", 
			"VIRGULA", "PONTO_INTERROGACAO", "PONTO_EXCLAMACAO", "PARENTESIS_DIREITO", 
			"PARENTESIS_ESQUERDO", "WINDOWS_NEWLINE", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Exam.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ExameContext exame() {
			return getRuleContext(ExameContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			exame();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExameContext extends ParserRuleContext {
		public RegraTituloExameContext regraTituloExame() {
			return getRuleContext(RegraTituloExameContext.class,0);
		}
		public RegraHeaderExameContext regraHeaderExame() {
			return getRuleContext(RegraHeaderExameContext.class,0);
		}
		public List<SeccaoContext> seccao() {
			return getRuleContexts(SeccaoContext.class);
		}
		public SeccaoContext seccao(int i) {
			return getRuleContext(SeccaoContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(ExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(ExamParser.WINDOWS_NEWLINE, i);
		}
		public ExameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterExame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitExame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitExame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExameContext exame() throws RecognitionException {
		ExameContext _localctx = new ExameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exame);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			regraTituloExame();
			setState(64); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				_la = _input.LA(1);
				if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
			setState(68);
			regraHeaderExame();
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(69);
					_la = _input.LA(1);
					if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(72); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
				setState(74);
				seccao();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegraTituloExameContext extends ParserRuleContext {
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public RegraTituloExameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regraTituloExame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterRegraTituloExame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitRegraTituloExame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitRegraTituloExame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegraTituloExameContext regraTituloExame() throws RecognitionException {
		RegraTituloExameContext _localctx = new RegraTituloExameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regraTituloExame);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			frase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegraHeaderExameContext extends ParserRuleContext {
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public GradeContext grade() {
			return getRuleContext(GradeContext.class,0);
		}
		public RegraMensagemContext regraMensagem() {
			return getRuleContext(RegraMensagemContext.class,0);
		}
		public RegraHeaderExameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regraHeaderExame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterRegraHeaderExame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitRegraHeaderExame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitRegraHeaderExame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegraHeaderExameContext regraHeaderExame() throws RecognitionException {
		RegraHeaderExameContext _localctx = new RegraHeaderExameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_regraHeaderExame);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			feedback();
			setState(82);
			grade();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMERO) | (1L << PALAVRA) | (1L << HIFEN) | (1L << UNDERSCORE))) != 0)) {
				{
				setState(83);
				regraMensagem();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeedbackContext extends ParserRuleContext {
		public TerminalNode FEEDBACK() { return getToken(ExamParser.FEEDBACK, 0); }
		public TerminalNode ESPACO() { return getToken(ExamParser.ESPACO, 0); }
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(ExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(ExamParser.WINDOWS_NEWLINE, i);
		}
		public FeedbackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feedback; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterFeedback(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitFeedback(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitFeedback(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeedbackContext feedback() throws RecognitionException {
		FeedbackContext _localctx = new FeedbackContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_feedback);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(FEEDBACK);
			setState(87);
			match(ESPACO);
			setState(88);
			frase();
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				_la = _input.LA(1);
				if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GradeContext extends ParserRuleContext {
		public TerminalNode GRADE() { return getToken(ExamParser.GRADE, 0); }
		public TerminalNode ESPACO() { return getToken(ExamParser.ESPACO, 0); }
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(ExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(ExamParser.WINDOWS_NEWLINE, i);
		}
		public GradeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterGrade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitGrade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitGrade(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GradeContext grade() throws RecognitionException {
		GradeContext _localctx = new GradeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_grade);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(GRADE);
			setState(95);
			match(ESPACO);
			setState(96);
			frase();
			setState(98); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(97);
					_la = _input.LA(1);
					if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(100); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeccaoContext extends ParserRuleContext {
		public TerminalNode SECCAO() { return getToken(ExamParser.SECCAO, 0); }
		public RegraMensagemContext regraMensagem() {
			return getRuleContext(RegraMensagemContext.class,0);
		}
		public List<PerguntaContext> pergunta() {
			return getRuleContexts(PerguntaContext.class);
		}
		public PerguntaContext pergunta(int i) {
			return getRuleContext(PerguntaContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(ExamParser.NEWLINE, 0); }
		public TerminalNode WINDOWS_NEWLINE() { return getToken(ExamParser.WINDOWS_NEWLINE, 0); }
		public SeccaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterSeccao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitSeccao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitSeccao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccaoContext seccao() throws RecognitionException {
		SeccaoContext _localctx = new SeccaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_seccao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(SECCAO);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WINDOWS_NEWLINE || _la==NEWLINE) {
				{
				setState(103);
				_la = _input.LA(1);
				if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMERO) | (1L << PALAVRA) | (1L << HIFEN) | (1L << UNDERSCORE))) != 0)) {
				{
				setState(106);
				regraMensagem();
				}
			}

			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				pergunta();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartPerguntaContext extends ParserRuleContext {
		public List<PerguntaContext> pergunta() {
			return getRuleContexts(PerguntaContext.class);
		}
		public PerguntaContext pergunta(int i) {
			return getRuleContext(PerguntaContext.class,i);
		}
		public StartPerguntaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startPergunta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).enterStartPergunta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener) ((ExamListener)listener).exitStartPergunta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor) return ((ExamVisitor<? extends T>)visitor).visitStartPergunta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartPerguntaContext startPergunta() throws RecognitionException {
		StartPerguntaContext _localctx = new StartPerguntaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_startPergunta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				pergunta();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
